styles.css
body {
  margin: 0px;
  padding: 0px;
  background-color: #0d0d0d;
  font-family: "Poppins", sans-serif;
  color: white;
  font-size: 24px;
}

.head {
  display: grid;
  grid-template-columns: repeat(6 1fr);
  position: sticky;
  top: 0;
  background-color: #0d0d0d;
  z-index: 10;
}

#a img {
  width: 20vw;
  margin: 20px 20px 0px 20px;
}

.background-logo {
  grid-column: 1 / 3;
}

.menu {
  grid-column: 3/5;
  align-self: center;
  justify-self: right;
}

.menu a {
  text-decoration: none;
  color: white;
  margin-right: 10px;
}

.social-media {
  grid-column: 5/6;
  align-self: center;
  justify-self: center;
}
.social-media a {
  text-decoration: none;
  color: white;
  margin-right: 10px;
}

.flags {
  position: fixed;
  top: 5px;
  right: 1;
  margin-right: 10px;
}

.flag {
  font-size: 16px;
  text-decoration: none;
  margin-top: 10px;
  margin-left: 10px;
  border: 1px solid white;
  border-radius: 4px;
  padding: 0px 2px;
  color: white;
}

/* main shit */

.background {
  height: 100vh;
}
.logo2 {
  width: 70vw;
  transform: rotate(-8deg);
  margin-top: 20vh;
  margin-left: 12vw;
}

/* about */
.about {
  margin-left: 5vw;
  margin-right: 5vw;
  display: flex;
  height: 100vh;
}

.aboutme {
  width: 20vw;
  margin-left: 10px;
  margin-top: 20vh;
}

article h2 {
  margin-top: 20vh;
}

/* portfolio */
.photo {
  width: 96%;
  margin: 1vh;
}
.portfolio {
  margin-left: 5vw;
  margin-right: 5vw;
}
.photos {
  display: flex;
}
.columnone {
  display: flex;
  flex-direction: column;
}
.columntwo {
  display: flex;
  flex-direction: column;
}
.columnthree {
  display: flex;
  flex-direction: column;
}

/* contact */
.contact {
  margin-left: 5vw;
  margin-right: 5vw;
  height: 95vh;
}
.contact h2 {
  margin-top: 20vh;
}

/* footer */
footer {
  margin-left: 5vw;
  margin-right: 5vw;
  height: 5vh;
  text-align: center;
}

/* animations just on large screens */

@media screen and (min-width: 1000px) {
  .photo:hover {
    transform: scale(1.05);
  }
}

/* small screen layout */
@media screen and (max-width: 992px) {
  .logo {
    display: none;
  }
  body {
    font-size: 18px;
  }
  .head {
    padding: 10px 0px;
  }
  .logo2 {
    margin-top: 35vh;
  }
}

@media screen and (max-width: 650px) {
  body {
    font-size: 16px;
  }
  .flags {
    position: inherit;
    grid-row: 1;
    grid-column: 1/2;
  }
  .social-media {
    grid-row: 1/2;
    grid-column: 5/6;
  }
  .menu {
    grid-row: 2/3;
    grid-column: 1/6;
    justify-self: center;
    margin-top: 5px;
  }
  .menu a {
    border: 1px solid white;
    border-radius: 4px;
    padding: 0px 5px;
    color: white;
  }
  .about {
    margin-left: 5vw;
    margin-right: 5vw;
    flex-direction: column;
    font-size: 14px;
    height: 100%;
  }
  article h2 {
    margin-top: 15vh;
  }
  .aboutme {
    width: 60vw;
    margin-left: 15vw;
    margin-top: 10px;
  }
  .portfolio {
    margin-left: 5vw;
    margin-right: 5vw;
    font-size: 14px;
  }
  .portfolio h2 {
    margin-top: 10vh;
  }
  .photos {
    display: block;
  }
  .contact {
    margin-left: 5vw;
    margin-right: 5vw;
    height: 95vh;
    font-size: 14px;
  }
  .contact h2 {
    margin-top: 15vh;
  }
  footer {
    margin-left: 5vw;
    font-size: 10px;
  }
}

@media screen and (max-width: 420px) {
  body {
    font-size: 12px;
  }
  .menu a {
    margin-right: 2px;
  }
}

@media screen and (max-width: 310px) {
  body {
    font-size: 10px;
  }
}

